services/fd-tagging-tool/src/test/resources/valid/ValidCombination/BasicValidTest.fd
package valid.ValidCombination;

featurediagram BasicValidTest {

  Car -> ElectricWindowOpener? & PanoramicRoof?;

  Car -> SmallTrunk ^ LargeTrunk;

  PanoramicRoof -> Electric?;

  Electric requires ElectricWindowOpener;
}
