services/fd-tagging-tool/src/test/resources/invalid/TwoSameTags/TwoSameTags.fd
package invalid.TwoSameTags;

featurediagram TwoSameTags {

  Car -> ElectricWindowOpener? & PanoramicRoof?;

  Car -> SmallTrunk ^ LargeTrunk;

  PanoramicRoof -> Electric?;

  Electric requires ElectricWindowOpener;
}
